    author name within brakets and the comment:

S <mave> comment goes here

   where S can be one of the following symbols:
    '+' : means that something has been added to NNFW
    '-' : means that something has been dropped from NNFW
    'B' : means a BugFix
    'C' : means that something has been changed (e.g. implementation of a Class or a signature method)
==== End of Legend ====

    ==> 220 - 25/05/2007 <==

C <mave> improved error messages in xml processing
B <mave> added more exit-points in xml processing to avoid data corruption when
		mandatory tags are not present
B <mave> bugfixed segmentation fault when it's omitted the attribute 'i' in the xml 
		file for vector properties
B <mave> bugfixed segmentation fault when processed a non-existing property in xml files
+ <mave> added an experimental class nnfwString for future Unicode support
- <mave> the old nnfwMessage is not present anymore
C <mave> created a new system for warning, error and fatal messages
C <mave> NNFW_DEBUG is defined also when CMake built type is ReleaseWithDebugInfo

    ==> 218 - 25/05/2007 <==

B <mave> now nnfw-config report correctly the MKL include directory
C <mave> renamed RealVec::mul to RealVec::outprod, and bugfixed
+ <mave> added class BackPropagationAlgo, a sub-class of LearningAlgorithm for BackPropagation
+ <mave> implemented clone method to sub-classes of MatrixModifier and VectorModifier
C <mave> renamed some methods of sub-classes of MatrixModifier
C <mave> Variant methods getRealVec and getRealMat now returns non-const pointers
C <mave> now Modifier class inheritance from Clonable
+ <mave> added methods setVectorModifier, setMatrixModifier to LearningAlgorithm

    ==> 201 - 10/05/2007 <==

C <mave> Factory map "MatrixLinker" to "DotLinker" for backward compatibility

    ==> 200 - 10/05/2007 <==

C <mave> Cluster::accumulate() renamed to setAccumulate()
- <mave> remove Cluster::size(); use Cluster::numNeurons()

    ==> 199 - 10/05/2007 <==
